// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Console tracing exporter class Test removeSpanWithChildren method should clear printed spans 1`] = `
{
  "span1": {
    "children": [
      "span2",
      "span5",
    ],
    "span": {
      "id": "span1",
      "parentID": null,
    },
  },
  "span2": {
    "children": [
      "span3",
    ],
    "span": {
      "id": "span2",
      "parentID": "span1",
    },
  },
  "span3": {
    "children": [
      "span4",
    ],
    "span": {
      "id": "span3",
      "parentID": "span2",
    },
  },
  "span4": {
    "children": [],
    "span": {
      "id": "span4",
      "parentID": "span3",
    },
  },
  "span5": {
    "children": [],
    "span": {
      "id": "span5",
      "parentID": "span1",
    },
  },
  "span6": {
    "children": [],
    "span": {
      "id": "span6",
      "parentID": null,
    },
  },
}
`;

exports[`Test Console tracing exporter class Test spans printing should print full trace 1`] = `
[
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│ ├─┬─ Span #2 *               50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│ │ └─── Span #22 (with lon... 25ms [..........■■■■■■■■■■....................] │",
  "│ └─── Span #3                 75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print full trace with error 1`] = `
[
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│ ├─┬─ Span #2 *               50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│ │ └─── Span #22 » ×          25ms [..........■■■■■■■■■■....................] │",
  "│ └─── Span #3                 75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;

exports[`Test Console tracing exporter class Test spans printing should print to the default logger 1`] = `
[
  "┌──────────────────────────────────────────────────────────────────────────────┐",
  "│ ID: span-1                                                 Depth: 3 Total: 4 │",
  "├──────────────────────────────────────────────────────────────────────────────┤",
  "│ Span #1                     100ms [■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■] │",
  "│ ├─┬─ Span #2 *               50ms [........■■■■■■■■■■■■■■■■■■■■............] │",
  "│ │ └─── Span #22 »            25ms [..........■■■■■■■■■■....................] │",
  "│ └─── Span #3                 75ms [......■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■....] │",
  "└──────────────────────────────────────────────────────────────────────────────┘",
]
`;
